fix(ai): 搜索增强降级不再污染缓存，异常不再逃逸到检索主链路